--- a/index.html
+++ b/index.html
@@ -1,77 +1,96 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </head>
 
   <body>
 
     <div class="jumbotron text-center">
       <div class="container">
-        <h3>Subnet Calcalator</h3>
+        <h1>Subnet Calcalator</h1>
       </div>
     </div>
     <div class="container">
-      <div class="col-sm-2 form-col">
-          <label class="control-label">Subnet</label>
+      <div class="form-group">
+          <div class="row">
+              <div class="col-sm-3 form-col">
+                  <h4>Subnet </h4>
+              </div>
+              <div class="col-sm-6 form-col">
+                  <select class="form-control subnet" id="subnet">
+                    <option value="32">255.255.255.255 / 32</option>
+                    <option value="31">255.255.255.254 / 31</option>
+                    <option value="30">255.255.255.252 / 30</option>
+                    <option value="29">255.255.255.248 / 29</option>
+                    <option value="28">255.255.255.240 / 28</option>
+                    <option value="27">255.255.255.224 / 27</option>
+                    <option value="26">255.255.255.192 / 26</option>
+                    <option value="25">255.255.255.128 / 25</option>
+                    <option value="24">255.255.255.0 / 24</option>
+                    <option value="23">255.255.254.0 / 23</option>
+                    <option value="22">255.255.252.0 / 22</option>
+                    <option value="21">255.255.248.0 / 21</option>
+                    <option value="20">255.255.240.0 / 20</option>
+                    <option value="19">255.255.224.0 / 19</option>
+                    <option value="18">255.255.192.0 / 18</option>
+                    <option value="17">255.255.128.0 / 17</option>
+                    <option value="16">255.255.0.0 / 16</option>
+                    <option value="15">255.254.0.0 / 15</option>
+                    <option value="14">255.252.0.0 / 14</option>
+                    <option value="13">255.248.0.0 / 13</option>
+                    <option value="12">255.240.0.0 / 12</option>
+                    <option value="11">255.224.0.0 / 11</option>
+                    <option value="10">255.192.0.0 / 10</option>
+                    <option value="9">255.128.0.0 / 9</option>
+                    <option value="8">255.0.0.0 / 8</option>
+                    <option value="7">254.0.0.0 / 7</option>
+                    <option value="6">252.0.0.0 / 6</option>
+                    <option value="5">248.0.0.0 / 5</option>
+                    <option value="4">240.0.0.0 / 4</option>
+                    <option value="3">224.0.0.0 / 3</option>
+                    <option value="2">192.0.0.0 / 2</option>
+                    <option value="1">128.0.0.0 / 1</option>
+                  </select>
+              </div>
+          </div>
       </div>
-      <div class="col-sm-6 form-col">
-        <select id="subnet">
-          <option value="32">255.255.255.255 / 32</option>
-          <option value="31">255.255.255.254 / 31</option>
-          <option value="30">255.255.255.252 / 30</option>
-          <option value="29">255.255.255.248 / 29</option>
-          <option value="28">255.255.255.240 / 28</option>
-          <option value="27">255.255.255.224 / 27</option>
-          <option value="26">255.255.255.192 / 26</option>
-          <option value="25">255.255.255.128 / 25</option>
-          <option value="24">255.255.255.0 / 24</option>
-          <option value="23">255.255.254.0 / 23</option>
-          <option value="22">255.255.252.0 / 22</option>
-          <option value="21">255.255.248.0 / 21</option>
-          <option value="20">255.255.240.0 / 20</option>
-          <option value="19">255.255.224.0 / 19</option>
-          <option value="18">255.255.192.0 / 18</option>
-          <option value="17">255.255.128.0 / 17</option>
-          <option value="16">255.255.0.0 / 16</option>
-          <option value="15">255.254.0.0 / 15</option>
-          <option value="14">255.252.0.0 / 14</option>
-          <option value="13">255.248.0.0 / 13</option>
-          <option value="12">255.240.0.0 / 12</option>
-          <option value="11">255.224.0.0 / 11</option>
-          <option value="10">255.192.0.0 / 10</option>
-          <option value="9">255.128.0.0 / 9</option>
-          <option value="8">255.0.0.0 / 8</option>
-          <option value="7">254.0.0.0 / 7</option>
-          <option value="6">252.0.0.0 / 6</option>
-          <option value="5">248.0.0.0 / 5</option>
-          <option value="4">240.0.0.0 / 4</option>
-          <option value="3">224.0.0.0 / 3</option>
-          <option value="2">192.0.0.0 / 2</option>
-          <option value="1">128.0.0.0 / 1</option>
-        </select>
+
+      <div class="form-group">
+          <div class="row">
+              <div class="col-sm-3 form-col">
+                  <h4>IP Address</h4>
+              </div>
+              <div class="col-sm-6 form-col">
+                  <input class="form-control" type="text" id="ip" value="158.108.1.1">
+              </div>
+              <div class="col-sm-3 submit">
+                <button class="btn btn-lg btn-success" type="submit" onclick="show()">Calculate</button>
+              </div>
+          </div>
       </div>
-    </div>
+    </divL>
+
     <div class="container">
-      <div class="col-sm-2 form-col">
-          <label class="control-label">IP Address</label>
-      </div>
-      <div class="col-sm-6 form-col">
-        <input id="ip" type="text" value="158.108.12.34">
-      </div>
-    </div>
-    <div class="col-sm-2 form-col">
-      <button class="btn btn-default btn-primary" type="submit" onclick="show()">Calculate</button>
-    </div>
+      <table class="table table-bordered">
+          <thead id="baseTable">
+          </thead>
+      </table>
 
-    <table id="baseTable"></table>
+      <h1 id="allPossibleNetwork"></h1>
 
-    <table id="possibleTable"></table>
+      <table class="table">
+        <thead class="thead-dark" id="possibleTable">
+        </thead>
+      </table>
+    </div>
 
   </body>
 
 </html>
-
 
 <script>
 
@@ -82,6 +101,7 @@
   var ip = document.getElementById("ip");
   var baseTable = document.getElementById("baseTable");
   var possibleTable = document.getElementById("possibleTable");
+  var allPossibleNetwork = document.getElementById("allPossibleNetwork");
 
   function replaceStringAt(string, ch, index) {
     return string.substring(0, index) + ch + string.substring(index + 1)
@@ -284,6 +304,10 @@
     return result
   }
 
+  function createHeader(){
+    allPossibleNetwork.innerHTML = "<h1>All Possible Networks</h1>"
+  }
+
   function createPossibleTable() {
     headers = ["Network Address", "Usable Host Range", "Broadcast Address:"]
     data = getAllGroups()
@@ -309,7 +333,7 @@
   }
 
   function createBaseTable() {
-    headers = ["IP Address", "Network Address", "Usable Host IP Range", "Broadcast Address", "Total Number of Hosts", "Number of Usable Hosts", "Subnet Mask", "Wildcard Mask", "Binary Subnet Mask", "IP Class", "CIDR Notation", "IP Type", "Short", "Binary ID", "Integer ID", "Hex ID", "in-addr.arpa", "IPv4 Mapped Address", "6to4 Prefix"]
+    headers = ["IP Address", "Network Address", "Usable Host IP Range", "Broadcast Address", "Total Number of Hosts", "Number of Usable Hosts", "Subnet Mask", "Wildcard Mask", "Binary Subnet Mask", "IP Class", "CIDR Notation", "IP Type", "Short", "Binary ID", "Integer ID", "Hex ID", "in-addr.arpa"]
     data = [];
     data[0] = ip.value
     data[1] = networkAddress()
@@ -345,6 +369,7 @@
 
   function show() {
     createBaseTable()
+    createHeader()
     createPossibleTable()
   }
 
